# mdall-exploration

./: .gitignore  .pdm-python  .pdm.toml  Makefile  Notes.md  README.md  pyproject.toml  schema.sql
app/: __init__.py  main.py  test_main.py
migrations/: 000001_create_companies.up.sql  000001_create_tables.down.sql  000001_create_tables.up.sql  000002_create_devices.up.sql  000003_create_licences.up.sql
scripts/: companies.py  data_import.py  devices.py  import_companies.py  import_data.py  import_licence_types.py  licence_types.py  licences.py
